ajuste de estilo en sección de contacto

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -173,60 +173,60 @@ header
   position relative
 
 
-.input-search
-  height 55px
-  border 1px solid #eee
-  font-size 18px
-  display inline-block
-  font-weight 300
-  outline none
-  color #555
-  padding 3px
-  padding-right 40px
-  width 120px
-  position absolute
-  top 10px
-  right 0
-  background none
-  z-index 3
-  transition width 0.4s cubic-bezier(0, 0.795, 0, 1)
-  cursor pointer
-  padding-left 15px
+  .input-search
+    height 55px
+    border 1px solid #eee
+    font-size 18px
+    display inline-block
+    font-weight 300
+    outline none
+    color #555
+    padding 3px
+    padding-right 40px
+    width 120px
+    position absolute
+    top 10px
+    right 0
+    background none
+    z-index 3
+    transition width 0.4s cubic-bezier(0, 0.795, 0, 1)
+    cursor pointer
+    padding-left 15px
 
 
-input[type="text"]:focus:hover
-  border none
-  border-bottom 1px solid #BBB !important
+  input[type="text"]:focus:hover
+    border none
+    border-bottom 1px solid #BBB !important
 
 
-input[type="text"]:focus
-  width 750px
-  background white
-  z-index 1
-  border none
-  border-bottom 1px solid #BBB !important
-  cursor text
+  input[type="text"]:focus
+    width 750px
+    background white
+    z-index 1
+    border none
+    border-bottom 1px solid #BBB !important
+    cursor text
 
-input[type="submit"]
-  height 45px
-  width 45px
-  display inline-block
-  colorred
-  float right
-  background transparent
-  text-indent -10000px
-  border none
-  position absolute
-  top 0
-  right 0
-  z-index 2
-  cursor pointer
-  opacity 0.4
-  cursor pointer
-  transition opacity .4s ease
+  input[type="submit"]
+    height 45px
+    width 45px
+    display inline-block
+    colorred
+    float right
+    background transparent
+    text-indent -10000px
+    border none
+    position absolute
+    top 0
+    right 0
+    z-index 2
+    cursor pointer
+    opacity 0.4
+    cursor pointer
+    transition opacity .4s ease
 
-input[type="submit"]:hover
-  opacity 0.8
+  input[type="submit"]:hover
+    opacity 0.8
 
 .btn-white
   background white
@@ -679,6 +679,10 @@ input[type="submit"]:hover
     a
       font-size 20px
       padding-right 30px
+.social
+  h2
+    font-size 24px
+    color #79afa0
 
 /* Projects detail */
 .recommendations-detail
@@ -917,7 +921,7 @@ input[type="submit"]:hover
 .form-section
   background transparent
   padding 0
-  margin 160px 0px 25px
+  padding 160px 0px 25px
   .title, .text-form
     color #565656
 .contact-section
