se agregaron iconos

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -162,7 +162,12 @@ header
   .logo
     width auto
     margin-top 0
-  /* search form menu */
+
+.navbar-header
+  color #d2b770 !important
+  text-align left
+
+/* search form menu */
 #wrap
   margin 20px 0px 15px 120px
   display inline-block
