Fix fotter mail to

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -107,7 +107,7 @@
         <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300 |</a>
         <a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300 |</a>
         <a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79 |</a>
-        <a href="mailto:info@viajescoral.com.mx"><i class="fa fa-envelope"></i> info@viajescoral.com</a>
+        <a href="mailto:info@viajescoral.com"><i class="fa fa-envelope"></i> info@viajescoral.com</a>
     </div>
 </section>
 
