--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -7,7 +7,7 @@
 
         <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)531 73 00</a></h3>
 
-        <h3><a href="tel:3531117379"><i class="fa fa-phone"></i> (353)531 82 00</a></h3>
+        <h3><a href="tel:013535318200"><i class="fa fa-phone"></i> (353)531 82 00</a></h3>
 
         <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
 
@@ -17,7 +17,7 @@
 
         <h2>Sucursal centro</h2>
 
-        <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
+        <h3><a href="tel:013535326721"><i class="fa fa-phone"></i> (353)532 67 21</a></h3>
 
         <h3>
             <a target="_blank" href="https://www.google.com.mx/maps/place/Viajes+Coral+Centro/@20.0580736,-102.7251509,17z/data=!3m1!4b1!4m5!3m4!1s0x842efcad325c1be3:0x1e3d000ad6c67ed!8m2!3d20.0580736!4d-102.7229569">Dirección:
@@ -37,7 +37,7 @@
             isa_viajes03@outlook.com</a>
         </h3>
 
-        <h3><a href="mailto:isa_viajes03@outlook.com"><i class="fa fa-envelope"></i>
+        <h3><a href="mailto:isaviajescoral@hotmail.com"><i class="fa fa-envelope"></i>
             isaviajescoral@hotmail.com</a>
         </h3>
 
