--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,5 +1,30 @@
 <div class="container">
-    <p class="text-center text">
-        Viajes Coral · 2016
-    </p>
+    <div class="col-md-12 first-foo">
+        <div class="col-sm-6">
+            <div class="social-media-footer">
+                <a href="#">Siguenos en: <i class="fa fa-facebook-square"></i></a>
+                <a href="#"> <i class="fa fa-twitter-square"></i></a>
+                <a href="#"> <i class="fa fa-google-plus-square"></i></a>
+            </div>
+        </div>
+        <div class="col-sm-6 info">
+            <a href="https://appsto.re/mx/QrI68.i"><img style="height: 35px;" src="img/download-app.png" alt="App Store"/></a>
+            <a href="https://play.google.com/store/apps/details?id=com.desarrollapps.mercadomovil&hl=es"><img style="height: 35px;" src="img/download-play.png" alt="Google play"/></a>
+            <a href="https://www.geotrust.com/es/"><img style="height: 35px;" src="img/ssl-valid-en-M.gif" alt="Secured"/></a>
+            <a href="https://www.mcafeesecure.com/verify?host=mercadomovil.com.mx"><img style="height: 35px;" src="img/vp_ms_trustmark.png" alt="McAfee Secure"/></a>
+        </div>
+    </div>
+    <div class="col-md-12 second-foo">
+        <div class="col-sm-6">
+            <div class="social-media-footer">
+                <a href="#"> Ayuda</a>
+                <a href="#"> Contacto</a>
+                <a href="#"> Términos y condiciones</a>
+                <a href="#"> Aviso de privacidad</a>
+            </div>
+        </div>
+        <div class="col-sm-6 info">
+            <p>© Mercado Móvil 2016</p>
+        </div>
+    </div>
 </div>
